hphp/test/slow/phpism/halt_compiler.php.expectf
Fatal error: __halt_compiler() is not supported in Hack in %s on line 5
